Saved my work before rebase

--- a/Machine learning using Python/7 questions.ipynb
+++ b/Machine learning using Python/7 questions.ipynb
@@ -219,7 +219,9 @@
    "cell_type": "code",
    "execution_count": 75,
    "id": "79baeb92-9da1-4f25-b9de-9cbca569f078",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
