--- a/Machine learning using Python/48_SIMPLE_LINEAR_REGESSION_PART1.ipynb
+++ b/Machine learning using Python/48_SIMPLE_LINEAR_REGESSION_PART1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "e6d3ae2a-4cf7-4e3b-b569-3db03ded2ee5",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "8952aff4-388f-406a-8399-1bac7be430a4",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "4  6.94     3.57"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "ef02b0d3-7d58-4ae3-8e37-8c054305642c",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "Text(0, 0.5, 'PACKAGE IN LAHKS')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "dbb39798-db57-437a-9d33-608dbf0284dc",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "b09574f9-cc44-4f85-b3e1-ebbbad0abfe0",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "69c5312e-044f-4c4a-b85f-3ef508903e97",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "id": "c378fb3c-666b-44d0-ae10-5ade7af7f9f4",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "a078dfc5-61cf-4875-81a5-261971c95ea8",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "4f7b6184-0a80-4ef7-9bb7-6291d9d0c378",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,250 +626,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "6ed87bf4-a79b-4bf9-b1df-6793051c05c3",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cgpa</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>112</th>\n",
-       "      <td>8.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>7.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>5.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>6.22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>4.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>4.79</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>5.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>54</th>\n",
-       "      <td>6.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>8.35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>6.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>8.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>92</th>\n",
-       "      <td>7.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>6.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>126</th>\n",
-       "      <td>5.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>174</th>\n",
-       "      <td>7.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.82</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44</th>\n",
-       "      <td>5.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>113</th>\n",
-       "      <td>6.94</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>7.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>6.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>7.28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6.73</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>7.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>165</th>\n",
-       "      <td>8.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>173</th>\n",
-       "      <td>6.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>7.87</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>65</th>\n",
-       "      <td>7.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>8.63</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>122</th>\n",
-       "      <td>5.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>178</th>\n",
-       "      <td>8.15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>64</th>\n",
-       "      <td>7.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>8.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>57</th>\n",
-       "      <td>6.60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>78</th>\n",
-       "      <td>6.59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>7.47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>128</th>\n",
-       "      <td>7.93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>176</th>\n",
-       "      <td>6.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>6.37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53</th>\n",
-       "      <td>6.47</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     cgpa\n",
-       "112  8.58\n",
-       "29   7.15\n",
-       "182  5.88\n",
-       "199  6.22\n",
-       "193  4.57\n",
-       "85   4.79\n",
-       "10   5.32\n",
-       "54   6.86\n",
-       "115  8.35\n",
-       "35   6.87\n",
-       "12   8.94\n",
-       "92   7.90\n",
-       "13   6.93\n",
-       "126  5.91\n",
-       "174  7.32\n",
-       "2    7.82\n",
-       "44   5.09\n",
-       "3    7.42\n",
-       "113  6.94\n",
-       "14   7.73\n",
-       "23   6.19\n",
-       "25   7.28\n",
-       "6    6.73\n",
-       "134  7.20\n",
-       "165  8.21\n",
-       "173  6.75\n",
-       "45   7.87\n",
-       "65   7.60\n",
-       "48   8.63\n",
-       "122  5.12\n",
-       "178  8.15\n",
-       "64   7.36\n",
-       "9    8.31\n",
-       "57   6.60\n",
-       "78   6.59\n",
-       "71   7.47\n",
-       "128  7.93\n",
-       "176  6.29\n",
-       "131  6.37\n",
-       "53   6.47"
+       "112    4.10\n",
+       "29     3.49\n",
+       "182    2.08\n",
+       "199    2.33\n",
+       "193    1.94\n",
+       "85     1.48\n",
+       "10     1.86\n",
+       "54     3.09\n",
+       "115    4.21\n",
+       "35     2.87\n",
+       "12     3.65\n",
+       "92     4.00\n",
+       "13     2.89\n",
+       "126    2.60\n",
+       "174    2.99\n",
+       "2      3.25\n",
+       "44     1.86\n",
+       "3      3.67\n",
+       "113    2.37\n",
+       "14     3.42\n",
+       "23     2.48\n",
+       "25     3.65\n",
+       "6      2.60\n",
+       "134    2.83\n",
+       "165    4.08\n",
+       "173    2.56\n",
+       "45     3.58\n",
+       "65     3.81\n",
+       "48     4.09\n",
+       "122    2.01\n",
+       "178    3.63\n",
+       "64     2.92\n",
+       "9      3.51\n",
+       "57     1.94\n",
+       "78     2.21\n",
+       "71     3.34\n",
+       "128    3.34\n",
+       "176    3.23\n",
+       "131    2.01\n",
+       "53     2.61\n",
+       "Name: package, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test"
+    "y_test"
    ]
   },
   {
