--- a/01_MACHINE_LEARNING_USING_PYTHON/48_SIMPLE_LINEAR_REGESSION_PART1.ipynb
+++ b/01_MACHINE_LEARNING_USING_PYTHON/48_SIMPLE_LINEAR_REGESSION_PART1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "78854e27-a760-42ea-ab61-4ae8efc16188",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e6d3ae2a-4cf7-4e3b-b569-3db03ded2ee5",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "8952aff4-388f-406a-8399-1bac7be430a4",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "4  6.94     3.57"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ef02b0d3-7d58-4ae3-8e37-8c054305642c",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "Text(0, 0.5, 'PACKAGE IN LAHKS')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dbb39798-db57-437a-9d33-608dbf0284dc",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "b09574f9-cc44-4f85-b3e1-ebbbad0abfe0",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "69c5312e-044f-4c4a-b85f-3ef508903e97",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "c378fb3c-666b-44d0-ae10-5ade7af7f9f4",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a078dfc5-61cf-4875-81a5-261971c95ea8",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "4f7b6184-0a80-4ef7-9bb7-6291d9d0c378",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6ed87bf4-a79b-4bf9-b1df-6793051c05c3",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
        "Name: package, dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ad68ab42-6907-423c-85a2-92aa2f976351",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
        "array([3.89111601])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "39f03884-4928-4d6d-818d-f3b59bf40e42",
    "metadata": {},
    "outputs": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "2cb76871-90d9-4878-9a2e-c0cb8d0fd924",
    "metadata": {},
    "outputs": [
@@ -751,7 +751,7 @@
        "Text(0, 0.5, 'PACKAGE IN LAKHS')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2ea376b9-bcf6-4888-8d54-0cbe7bcb46ea",
    "metadata": {},
    "outputs": [],
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e0a137cd-a599-4306-b556-d1060ae2bd15",
    "metadata": {},
    "outputs": [],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "acbc7a99-a24e-47e2-992b-06efc1643c6b",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "array([3.89111601])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "9b65a585-2879-4bf1-93c0-5752b11a9f91",
    "metadata": {},
    "outputs": [
@@ -826,7 +826,7 @@
        "array([4.40443183])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "116c5224-f795-43e9-8f5f-e3c2b5cca3ae",
    "metadata": {},
    "outputs": [
@@ -847,7 +847,7 @@
        "array([54.89908542])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "7fdf9185-836c-44d6-9d82-581d9d7b2828",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
        "array([-0.89611192])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "2100589d-56cb-4ebf-be48-9e8da99b552d",
    "metadata": {},
    "outputs": [
@@ -1116,7 +1116,7 @@
        "53   6.47"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,26 +1127,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "3b739a52-ed57-4422-a1dc-11151e1db9a3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([3.89111601])"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "fc7bea38-b94c-472d-b332-9a31fbb9ba67",
    "metadata": {},
    "outputs": [
@@ -1164,7 +1153,7 @@
        "array([3.09324469])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "6c548ad3-2216-42d7-bdad-97d66d266c97",
    "metadata": {},
    "outputs": [
@@ -1185,7 +1174,7 @@
        "array([-0.89611192])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1196,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "id": "30ef2563-be51-4e78-9a92-764adb4847cd",
    "metadata": {},
    "outputs": [
@@ -1206,7 +1195,7 @@
        "array([-0.89611192])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,8 +1206,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "2bf32818-a1a4-4bfa-8cf4-1af7ac73bafc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred=lr.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8e8c1f28-8cea-4596-8163-cd1628a9082e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.89111601, 3.09324469, 2.38464568, 2.57434935, 1.6537286 ,\n",
+       "       1.77647803, 2.07219258, 2.93143862, 3.76278706, 2.93701814,\n",
+       "       4.09197872, 3.51170867, 2.97049525, 2.40138424, 3.18809652,\n",
+       "       3.46707251, 1.94386362, 3.24389172, 2.97607477, 3.41685683,\n",
+       "       2.55761079, 3.16577844, 2.85890486, 3.12114229, 3.68467378,\n",
+       "       2.8700639 , 3.49497011, 3.34432308, 3.91901361, 1.96060218,\n",
+       "       3.65119666, 3.2104146 , 3.74046898, 2.7863711 , 2.78079158,\n",
+       "       3.27178932, 3.52844723, 2.61340599, 2.65804215, 2.71383735])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "b0f540cb-9445-4a2a-ba0b-eafa295ec25a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "112    4.10\n",
+       "29     3.49\n",
+       "182    2.08\n",
+       "199    2.33\n",
+       "193    1.94\n",
+       "85     1.48\n",
+       "10     1.86\n",
+       "54     3.09\n",
+       "115    4.21\n",
+       "35     2.87\n",
+       "12     3.65\n",
+       "92     4.00\n",
+       "13     2.89\n",
+       "126    2.60\n",
+       "174    2.99\n",
+       "2      3.25\n",
+       "44     1.86\n",
+       "3      3.67\n",
+       "113    2.37\n",
+       "14     3.42\n",
+       "23     2.48\n",
+       "25     3.65\n",
+       "6      2.60\n",
+       "134    2.83\n",
+       "165    4.08\n",
+       "173    2.56\n",
+       "45     3.58\n",
+       "65     3.81\n",
+       "48     4.09\n",
+       "122    2.01\n",
+       "178    3.63\n",
+       "64     2.92\n",
+       "9      3.51\n",
+       "57     1.94\n",
+       "78     2.21\n",
+       "71     3.34\n",
+       "128    3.34\n",
+       "176    3.23\n",
+       "131    2.01\n",
+       "53     2.61\n",
+       "Name: package, dtype: float64"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fea25996-1354-4f08-98c9-19d77ddfd627",
+   "metadata": {},
+   "source": [
+    "## applying r2 score manuaally"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "7531cb97-24dd-4c47-b65d-21e40428c51e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.780730147510384\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_actual =list( y_test)\n",
+    "y_pred =list( lr.predict(X_test))\n",
+    "\n",
+    "y_mean=sum(y_actual)/len(y_actual)\n",
+    "\n",
+    "ssr=sum((y_actual[i]-y_pred[i])**2 for i in range (len(y_actual)))\n",
+    "ssm=sum((y_actual[i]-y_mean)**2 for i in range (len(y_actual)))\n",
+    "r2score=1-(ssr/ssm)\n",
+    "print(f\"{r2score}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "f576ff8a-3ee1-4cb3-ab46-1c2659cbdd5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r2 score is0.780730147510384\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "r2=r2_score(y_actual,y_pred)\n",
+    "print(f\"r2 score is{r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc5cd97-1fe6-4eb0-af19-e07313ac6262",
    "metadata": {},
    "outputs": [],
    "source": []
