--- a/01_BUILDING_OWN_ML_LIBRARY/07_MULTIPLE_LINEAR_REGRESSION/02_MLR_CODE_FROM_SCRATCH.ipynb
+++ b/01_BUILDING_OWN_ML_LIBRARY/07_MULTIPLE_LINEAR_REGRESSION/02_MLR_CODE_FROM_SCRATCH.ipynb
@@ -653,15 +653,15 @@
    "outputs": [],
    "source": [
     "def fit(X_train, y_train):\n",
-    "    X_train = np.insert(X_train, 0, 1, axis=1)  # Adding intercept term\n",
-    "    betas = np.linalg.inv(X_train.T @ X_train) @ X_train.T @ y_train  # Normal Equation\n",
+    "    X_train = np.insert(X_train, 0, 1, axis=1) \n",
+    "    betas = np.linalg.inv(X_train.T @ X_train) @ X_train.T @ y_train \n",
     "    intercept = betas[0]\n",
     "    coef = betas[1:]\n",
-    "    return intercept, coef  # Return values\n",
+    "    return intercept, coef \n",
     "\n",
     "def predict(X_test, intercept, coef):\n",
-    "    X_test = np.insert(X_test, 0, 1, axis=1)  # Add intercept term\n",
-    "    y_pred = np.dot(X_test, np.insert(coef, 0, intercept))  # Correct dot product\n",
+    "    X_test = np.insert(X_test, 0, 1, axis=1) \n",
+    "    y_pred = np.dot(X_test, np.insert(coef, 0, intercept))  \n",
     "    return y_pred"
    ]
   },
