--- a/02_MACHINE_LEARNING_USING_PYTHON/54.3_RIDGE_REGRESSION_ND_DATA.ipynb
+++ b/02_MACHINE_LEARNING_USING_PYTHON/54.3_RIDGE_REGRESSION_ND_DATA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "9cf2a007-840e-4015-8b6f-c98a8878a1fe",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 25,
    "id": "72a6986a-5a14-4a16-9ee3-69d843613d39",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "06a653f0-4ace-443d-8223-07b5f2ac530f",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "id": "5c979985-2975-4ebd-abf0-404d2c709029",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 28,
    "id": "b1ac043d-e49e-43c8-a23e-ab2fc72a4bfa",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "eb198cce-295d-4888-8529-8594470cabf1",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "ed213e63-22a2-4e91-a29f-7bcf76d23fe1",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "Ridge(alpha=0.1, solver='cholesky')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "dd8e7261-066d-4096-ba12-b3fd7847497a",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "9367a4e5-4ea6-4d58-ad28-6aebba1a4de6",
    "metadata": {},
    "outputs": [
@@ -546,7 +546,7 @@
        "       137.78850983])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "24c25726-5f49-4732-afbd-346e362848aa",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
        "0.4693128853309805"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "4e2a5a3e-7bfc-4ab9-8617-7eb246ed491a",
    "metadata": {},
    "outputs": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "id": "ec5cab2c-fcce-4801-9104-eb51cd82b11c",
    "metadata": {},
    "outputs": [
@@ -610,7 +610,7 @@
        "(353, 10)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,6 +635,7 @@
     "    def fit(self,X_train,y_train):\n",
     "        X_train=np.insert(X_train,0,1,axis=1)\n",
     "        I=np.identity(X_train.shape[1])\n",
+    "        I[0][0]=0\n",
     "        result=np.linalg.inv(np.dot(X_train.T,X_train)+self.alpha*I).dot(X_train.T).dot(y_train)\n",
     "        self.intercept_=result[0]\n",
     "        self.coef_=result[1:]\n",
@@ -653,10 +654,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.46921361559931896\n",
-      "[  44.04252774 -241.72019592  452.99153345  332.06044266  -76.32617866\n",
-      "  -68.54884462 -165.01664054  149.93980143  431.59483654   58.54419942]\n",
-      "150.84762720023164\n"
+      "0.4693128853309805\n",
+      "[  44.02063391 -241.69329987  452.98665299  332.04420177  -76.33686744\n",
+      "  -68.52143809 -164.98809083  149.96908118  431.61347417   58.51862681]\n",
+      "150.8905342560281\n"
      ]
     }
    ],
@@ -671,8 +672,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "3f9e6c93-a60d-4b77-acfe-00f747c31520",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import Ridge\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16648a50-7ce5-4244-b601-7cc5c61fcbcf",
    "metadata": {},
    "outputs": [],
    "source": []
