--- a/01_BUILDING_OWN_ML_LIBRARY/04_R2_SCORE_UPDATED/01_R2_SCORE.ipynb
+++ b/01_BUILDING_OWN_ML_LIBRARY/04_R2_SCORE_UPDATED/01_R2_SCORE.ipynb
@@ -13,17 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "7ad5205b-a70c-40f1-806e-7c3ace1772ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df=pd.read_csv(r'D:/20_MACHINE_LEARNING/01_MACHINE_LEARNING_USING_PYTHON/placement_cgpa_pcakge.csv')"
+    "df=pd.read_csv(r\"D:\\16_MACHINE_LEARNING\\02_MACHINE_LEARNING_USING_PYTHON\\placement_cgpa_pcakge.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "99218fa8-5f97-4de7-9975-c0f921d2852d",
    "metadata": {
     "scrolled": true
@@ -93,7 +93,7 @@
        "4  6.94     3.57"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "3c2b7cac-4ec3-4e3d-9917-239361fc4214",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "66796034-6d68-4abb-bc19-c8163a50ba6b",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "60eb3bf7-3dd7-42c3-97fc-6b51718c89e0",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "f6c5042f-2013-43c6-bd01-1c8baa37bcbe",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "d7134ca1-f190-4563-8c7f-614dd1bc3c4e",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "9c132131-1963-4cfc-b5f7-6f177349c056",
    "metadata": {},
    "outputs": [],
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "a1806b28-b9e9-460b-9815-48d55b58b9c5",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
        "0.780730147510384"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "0ee69fe6-d060-441c-abcb-61e76a10adc5",
    "metadata": {},
    "outputs": [
@@ -657,6 +657,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b1428c6a-65eb-485f-95ee-7736edf4da1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f20ea7eb-59b9-47e4-835f-5e02b9443781",
    "metadata": {},
    "outputs": [],
    "source": []
