--- a/01_BUILDING_OWN_ML_LIBRARY/07_MULTIPLE_LINEAR_REGRESSION/01_MULTIPLE_LINEAR_REGRESSION.ipynb
+++ b/01_BUILDING_OWN_ML_LIBRARY/07_MULTIPLE_LINEAR_REGRESSION/01_MULTIPLE_LINEAR_REGRESSION.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "33dfbcc2-6379-402f-8202-a5db31d56c93",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "d036ce7b-9ad5-4b24-82b5-366b7c866971",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "b2ecddd9-103b-489e-bb18-b39667444c42",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "(100, 3)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
+   "id": "b53049da-e3af-4c50-b711-99a02630a857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     114.500394\n",
+       "1      45.550225\n",
+       "2     -60.538936\n",
+       "3      27.728978\n",
+       "4    -140.134930\n",
+       "         ...    \n",
+       "95     31.936065\n",
+       "96     -3.855089\n",
+       "97      2.479851\n",
+       "98    118.287775\n",
+       "99    -35.492843\n",
+       "Name: target, Length: 100, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "5ca8ef07-56e4-44c7-ac59-3e3db7c58813",
    "metadata": {},
    "outputs": [],
@@ -59,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "2bb1de92-019e-4708-b915-cb46240a64d5",
    "metadata": {},
    "outputs": [],
