--- a/02_MACHINE_LEARNING_USING_PYTHON/51.2_GDREGRESSOR_CLASS.ipynb
+++ b/02_MACHINE_LEARNING_USING_PYTHON/51.2_GDREGRESSOR_CLASS.ipynb
@@ -161,7 +161,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1f1b16ad940>"
+       "<matplotlib.collections.PathCollection at 0x287f18242f0>"
       ]
      },
      "execution_count": 12,
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "e2a9d2ac-15fb-45f3-b456-83bfdd7d2acc",
    "metadata": {},
    "outputs": [],
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "c1a3ac38-8d71-4e26-bfca-3c282d0a3353",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "d48aaf4d-f570-4d1f-847a-257cfa77a43c",
    "metadata": {},
    "outputs": [
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "id": "379cd206-1753-4376-bdf7-8a3df9847b6a",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "9fc5198c-14c3-4e38-80be-4231dc68b8b1",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "       [-12.06068528]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "bf9b0547-9a04-4611-bb9a-e53dc63b5bfd",
    "metadata": {},
    "outputs": [
@@ -885,7 +885,7 @@
        "0.6343842836315579"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -894,6 +894,14 @@
     "from sklearn.metrics import r2_score\n",
     "r2_score(y_test,y_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5621316-e081-45f6-88d5-0ec762a0eb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
