--- a/PROJECT SUBMISSION/01_MULTIPLE_LR.ipynb
+++ b/PROJECT SUBMISSION/01_MULTIPLE_LR.ipynb
@@ -145,8 +145,7 @@
    "source": [
     "#concrete data set\n",
     "# df=pd.read_csv(r\"D:\\16_MACHINE_LEARNING\\02_MACHINE_LEARNING_USING_PYTHON\\concrete_data.csv\")\n",
-    "df=pd.read_csv(r\"D:\\fake\\concrete_data_100k.csv\")\n",
-    "\n",
+    "df=pd.read_csv(r\"D:\\fake\\concrete_data_100k.csv\")dhow\n",
     "df.head()\n",
     "X=df.iloc[:,0:8]\n",
     "y=df.iloc[:,-1]\n",
